--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     html, body {
       margin: 0;
       padding: 0;
-      background-color: black;
+      background-color: white;
       overflow: hidden;
       height: 100%;
       width: 100%;
