--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<script>
-  const video = document.getElementById('video');
-  const randomNumber = Math.floor(Math.random() * 3) + 1; // 1 to 3
-  const source = document.createElement('source');
-  source.src = `${randomNumber}.mp4`;
-  source.type = 'video/mp4';
-  video.appendChild(source);
-  video.load();
-
-  // Disable right-click
-  document.addEventListener('contextmenu', event => event.preventDefault());
-</script>
+hello
