fixed page name

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192x192.png">
   
   <meta charset="UTF-8">
-  <title>Random Video</title>
+  <title>~</title>
   <style>
     html, body {
       margin: 0;
